fix sidebar overlapping on mobile

--- a/configs/custom.css
+++ b/configs/custom.css
@@ -144,5 +144,5 @@ article p img {
 }
 
 .navBreadcrumb {
-    z-index: -1;
+    z-index: 1;
 }
